--- a/Home.css
+++ b/Home.css
@@ -1,9 +1,87 @@
+body{
+    padding: 0 0 40px 0;
+    border: 0;
+    margin: 0;
+    background-color: rgb(255,255,255);
+}
 h1{
     text-align: center;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 50px;
+    font-weight: 1000;
 }
 h2{
     text-align: center;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 30px;
+    font-weight: 700;
 }
 .A{
     text-align: center;
+    font-size: 30px;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+.new-change{
+    text-decoration: unset;
+    color: grey;
+}
+.blep{
+    text-decoration: unset;
+    color: white;
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight:1000;
+}
+
+.button {
+    background-color: rgb(239,140,104);
+    border: none;
+    color: white;
+    padding: 16px 32px;
+    text-align: center;
+    display: inline-block;
+    font-size: 30px;
+    margin: 4px 2px;
+    cursor: pointer;
+    border-radius: 12px;
+  }
+
+  .stretch-hands{
+      margin:0 25px;
+  }
+
+.left{
+    text-align: left;
+    top:0%;
+    left:0%;
+    right:90vh;
+}
+
+.center{
+    text-align: center;
+    top:0%;
+    left:42vh;
+    right:42vh;
+}
+
+.right{
+    text-align: right;
+    top:0%;
+    left:82vh;
+    right:0%;
+}
+
+.fix-it{
+    position:fixed;
+    width:100%;
+    background-color: rgb(180,230,222);
+}
+
+.relative-it{
+    position:relative;
+}
+
+.menupics{
+    height: 10vh;
+    width: auto;
 }
