--- a/HowItWorks.css
+++ b/HowItWorks.css
@@ -1,6 +1,29 @@
-.A{
+body{
+    background-color: rgb(255,255,255) ;
+}
+
+.A {
     text-align: center;
 }
-.NeedToKnowMore{
-    text-align:left;
+
+.NeedToKnowMore {
+    text-align: left;
+}
+
+h1{
+    text-align: center;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 50px;
+    font-weight: 1000;
+}
+
+h2{
+    text-align: center;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 30px;
+    font-weight: 700;
+}
+
+.colour {
+    color: rgb(239, 140, 104);
 }
