--- a/GetStarted.css
+++ b/GetStarted.css
@@ -1,3 +1,105 @@
-html{
+body {
+    padding: 0 0 0 0;
+    border: 0;
+    margin: 0;
+    background-color: rgb(255, 255, 255);
+}
+
+.center {
+    position: fixed;
+    left: 40%;
+    margin-left: 0px;
+}
+
+.right {
+    float: right;
+}
+
+.menupics {
+    height: 10vh;
+    width: auto;
+}
+
+.menubar {
+    position: fixed;
+    width: 100%;
+    background-color: rgb(180, 230, 222);
+}
+
+h1 {
     text-align: center;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 3vh;
+    font-weight: 1000;
+    margin: 0;
+}
+
+.restofwebpage {
+    margin: 0 4vh;
+    padding: 12vh 0 0 0;
+}
+
+.steps {
+    color: rgb(239, 140, 104);
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 2vh;
+    font-weight: 700;
+    margin-bottom: 0;
+}
+
+h2 {
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 2vh;
+    font-weight: 700;
+    margin-top: 0;
+}
+
+.content {
+    font-size: 0.75vh;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+li {
+    font-size: 0.75vh;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+ul {
+    padding-left: 3vh;
+    color: rgb(102, 102, 102);
+}
+
+.product {
+    font-size: 0.75vh;
+    font-family: Arial, Helvetica, sans-serif;
+    color: rgb(102, 102, 102);
+    margin-bottom: 1vh;
+}
+
+.breadbread {
+    border: 5vh;
+    border-color: rgb(239, 140, 104);
+    padding: 1vh;
+    text-align: center;
+}
+
+.step2 {
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: 700;
+    text-decoration: none;
+    font-size: 2vh;
+    color:white;
+}
+
+.btmbar {
+    position: relative;
+    width: 100%;
+    background-color: rgb(239, 140, 104);
+    height: 10%;
+}
+
+.footerwrap {
+    text-align: center;
+    height: 3vh;
+    padding: 1.5vh;
 }
